# ai-agent-statistics

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  update.yml
docs/: index.html  script.js
scripts/: export_db.py  initialize_db.py
sql/: initialize_metadata.sql  initialize_pull_request.sql  initialize_repository.sql  pr_counts_by_date.sql  pr_parquet.sql  repo_parquet.sql  to_parquet.sql
src/ai_agent_statistics/: __main__.py  github_gql.py
src/ai_agent_statistics/model/: __init__.py  pr.py
src/ai_agent_statistics/store/: schema.py  store.py
tests/model/: test_pr.py
webapp/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
webapp/public/: 404.html  pull_request.parquet
webapp/public/assets/: pr_counts_by_date.csv  pull_request.parquet  repository.parquet
webapp/src/: DuckDB.tsx  main.tsx  types.ts  utils.tsx
webapp/src/components/: ChartPage.tsx  Header.tsx  PullRequests.css  PullRequests.tsx  Statistics.tsx  Summary.tsx
webapp/src/components/data/: DataSchema.ts  data_query.tsx
webapp/src/components/scatter/: LineAdditions.tsx  LineChanges.tsx  LineDeletions.tsx  ScatterPlot.tsx
webapp/src/components/statistics/: LineAdditions.tsx  LineDeletions.tsx  PullRequestsCount.tsx  ReposCount.tsx
