[tool.poetry]
name = "ai-agent-statistics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ai_agent_statistics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
pytest = "^8.3.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
